# spidy-ai

./: .gitignore  LICENSE  README.md  app.py  app.tcss  backend.py  config.yaml  main.py  pyproject.toml  pyrightconfig.json  run_ui.sh  wake.py
components/: chat_view.py  dialogs.py  footer.py  header.py  prompt_bar.py  sidebar.py
core/: actions.py  assistant.py  brain.py  memory.py  network.py  permissions.py  stt.py  tts.py
docs/: architecture.md  generate-screenshots.py
docs/screenshots/: context-panel.txt  main-ui.txt  skills.txt  themes.txt  voice-mode.txt
skills/: __init__.py  alarm.py  apps.py  base_skill.py  clipboard.py  code_executor.py  hyprland.py  media.py  messaging.py  screenshot.py  search.py  sysinfo.py
skills/coding/: __init__.py  base.py
skills/files/: __init__.py  anime_rename.py  archive.py  auto_sort.py  create_folder.py  disk_usage.py  dotfiles.py  download_url.py  duplicates.py  find_file.py  grep_file.py  large_files.py  monitor_downloads.py  move_copy_delete.py  old_files.py  open_file.py  rename.py  sync_external.py  torrent.py  trash.py  yt_dlp.py
skills/schedule/: __init__.py  add_todo.py  calendar_sync.py  daily_briefing.py  deadline_alert.py  delete_reminder.py  list_reminders.py  list_todos.py  mark_todo.py  note_search.py  pomodoro.py  quick_note.py  recurring_alarm.py  set_reminder.py  study_tracker.py  weekly_summary.py
spidy/: __init__.py  config.py  context.py  logger.py  profile.py  system_prompt.py
spidy_tui/: __init__.py  app.py  app.tcss  backend.py  theme_manager.py
tools/: base_tool.py  executor.py
(+90 files in other folders)
